--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "scripts": {
     "dev": "nodemon server.js"
   },
+  "type": "module",
   "author": "x7uned",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
-    "@fastify/postgres": "^5.2.2",
+    "@fastify/jwt": "^8.0.0",
     "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
+    "fastify-formbody": "^5.3.0",
+    "joi": "^17.13.0",
+    "pg": "^8.11.5",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
-    "prisma": "^5.13.0",
     "ts-node": "^10.9.2"
   }
 }
